changed fonts and fixed spacings

--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 * {
-    font-family: 'Mallanna', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 body, html {
     font-size: 100%;
     height: 100%;
 }
-
 
 /* NAVBAR////////////////////////////////////////////////////////////// */
 
@@ -16,7 +15,7 @@ body, html {
 
 .navbar ul li a {
     color: rgb(154,0,51) !important;
-    font-size: 110%;
+    font-size: 105%;
     letter-spacing: .2rem;
     font-weight: 600;
 }
@@ -26,6 +25,7 @@ body, html {
 }
 
 /* HOME-PAGE////////////////////////////////////////////////////////////// */
+
 .background-image {
     background-image: url("assets/home_page.png");
     height: 100%;
@@ -39,17 +39,17 @@ body, html {
     text-align: center;
     padding-top: 10%;
     font-size: 360%;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: .3rem;
 }
 
 .background-image h5{
     color: white;
     text-align: center;
-    padding: 4% 22% 0 22%;
-    font-size: 130%;
+    padding: 3% 22% 0 22%;
+    font-size: 120%;
     line-height: 200%;
 }
-
-
 
 /* FOOTER////////////////////////////////////////////////////////////// */
 
@@ -60,16 +60,15 @@ body, html {
     width: 100%;
     background-color: white;
     text-align: center;
-    
 }
 
 .footer ul li{
-    margin: .8% 15% 0 15%;
+    margin: .9% 15% 0 15%;
 }
 
 .footer ul li a {
     color: rgb(128,0,43) !important;
-    font-size: 90%;
+    font-size: 85%;
     letter-spacing: .1rem;
     font-weight: 600;  
 }
